Add a form for the user to use

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1>Welcome to my recommender app!</h1>
-    <p1>To have some movies recommended please rate the following movies:</p1>
+    <p1>To have some movies recommended please rate the following movies:</p1><br><br>
+    <form action="/recommender">
+        Movie1: 
+        <input type="text", name="movie1" placeholder="0.0-5.0"><br><br>
+        Movie2: 
+        <input type="text", name="movie2" placeholder="0.0-5.0"><br><br>
+        Movie3: 
+        <input type="text", name="movie3" placeholder="0.0-5.0"><br><br>
+        <input type="submit">
+        
+    </form>
 </body>
 </html>
